--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,8 @@
 	},
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"dockerComposeFile": "docker-compose.yml",
-	"service": "libreoffice_app",
-	"workspaceFolder": "/workspace/libreoffice_python_app",
+	"service": "lo_pip_app",
+	"workspaceFolder": "/workspace/libreoffice_pip_ext",
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
