--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,50 @@
+[tool.oxt.config]
+build_dir = "build"
+dist_dir = "dist"
+oxt_name = "OooPip"
+token_file_ext = ["txt", "xml", "xcu", "json"]
+update_file = "ooopip.ext.update.xml"
+py_pkg_names = ["ooodev", "ooo"]
+py_pkg_files = ["typing_extensions.py"]
+py_pkg_dir = "py_pkgs"
+
+
+[tool.oxt.token]
+# in the form of "token_name": "token_value"
+# in the files the token will have a prefix and suffix of ___
+lo_identifier= "org.openoffice.extensions.ooopip"
+lo_implementation_name = "OooPipRunner"
+display_name_en_us = "LibreOffice Python Pip Template"
+description_en_us = "Template for creating pip based extensions for for LibreOffice"
+publisher_en_us = "AmourSpirit"
+publisher_url = "https://github.com/Amourspirit/python-libreoffice-pip"
+update_url_oxt = "https://raw.githubusercontent.com/Amourspirit/python-libreoffice-pip/main/___dist_dir___/___oxt_name___.oxt"
+update_url_xml = "https://raw.githubusercontent.com/Amourspirit/python-libreoffice-pip/main/___dist_dir___/___update_file___"
+url_pip = 'https://bootstrap.pypa.io/get-pip.py'
+log_file = "ooo_pip.log"
+log_name = "OOO PIP Installer"
+log_level = "INFO" # NONE, DEBUG, INFO, WARNING, ERROR, CRITICAL
+log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+# log_format = "%(levelname)s [%(module)s.py][%(funcName)s::%(lineno)d] %(message)s"
+
 [tool.poetry]
-name = "libreoffice python template"
+name = "libreoffice pip template"
 version = "0.1.0"
-description = "Template for creating python projects for LibreOffice"
-authors = ["My Name <myemail@address.com>"]
+description = "Template for creating pip based extensions for for LibreOffice"
+authors = [
+    ":Barry-Thomas-Paul: Moss <bigbytetech@gmail.com>"
+]
 license = "MIT"
 readme = "README.md"
 packages = [
-    { include = "app" }
+    { include = "src" }
 ]
 
 [tool.poetry.dependencies]
 python = "^3.8"
 ooouno = "^2.1.2"
-ooo-dev-tools = "^0.11.15"
+ooo-dev-tools = "0.12.2"
+toml = "^0.10.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -21,17 +53,12 @@ pytest = "^7.4.0"
 pytest-dotenv = "^0.5.2"
 black = "^23.7.0"
 oooscript = "^1.1.3"
+oooenv = "^0.2.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-
-[tool.ruff]
-extended-select=["ANN", "C4", "N", "SIM", "TCH"]
-ignore=[]
-show-fixes=true
-target="py37"
 
 [tool.pylint.'MESSAGES CONTROL']
 max-line-length = 120
