--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       args:
         LO_VERSION: "7.5.5"
         CONFIG_DIR: /config
+        POETRY_VER: "1.6.1"
     # user: root
     container_name: lo_pip_app
     security_opt:
@@ -40,8 +41,8 @@ services:
         target: /workspace/libreoffice_pip_ext/.venv
     
     ports:
-      - 3002:3000
-      - 3003:3001
+      - 3020:3000
+      - 3021:3001
     restart: unless-stopped
 
 volumes:
