--- a/oxt/lo_pip/config.json
+++ b/oxt/lo_pip/config.json
@@ -4,5 +4,6 @@
     "log_level": "___log_level___",
     "log_file": "___log_file___",
     "log_format": "___log_format___",
-    "py_pkg_dir": "___py_pkg_dir___"
+    "py_pkg_dir": "___py_pkg_dir___",
+    "requirements": ["verr"]
 }
