--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ log_level = "INFO" # NONE, DEBUG, INFO, WARNING, ERROR, CRITICAL
 log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
 # log_format = "%(levelname)s [%(module)s.py][%(funcName)s::%(lineno)d] %(message)s"
 
+[tool.oxt.requirements]
+verr = "^=1.1.2"
+
 [tool.poetry]
 name = "libreoffice pip template"
 version = "0.1.0"
