--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
 # log_format = "%(levelname)s [%(module)s.py][%(funcName)s::%(lineno)d] %(message)s"
 
 [tool.oxt.requirements]
-verr = "^=1.1.2"
+# https://python-poetry.org/docs/dependency-specification/
+verr = "^1.1.2"
 
 [tool.poetry]
 name = "libreoffice pip template"
