--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,10 +77,17 @@ disable = """
 include = ["src"]
 reportMissingModuleSource = false
 
+[tool.ruff]
+extended-select=["ANN", "C4", "N", "SIM", "TCH"]
+ignore=["E501"]
+show-fixes=true
+target="py38"
+
 [tool.pytest.ini_options]
 testpaths = [
     "tests",
 ]
+
 markers = [
     "skip_headless: skips a test in headless mode",
     "skip_not_headless_os: skips a test in GUI mode for give os"
