--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ py_pkg_files = []
 py_pkg_dir = "py_pkgs"
 pip_wheel_url = "https://files.pythonhosted.org/packages/50/c2/e06851e8cc28dcad7c155f4753da8833ac06a5c704c109313b8d5a62968a/pip-23.2.1-py3-none-any.whl"
 zip_preinstall_pure = true
+auto_install_in_site_packages = true
 
 
 
@@ -37,6 +38,7 @@ typing-extensions = ">=4.7.0"
 verr = ">=1.1.2"
 
 [tool.oxt.preinstall.pure]
+# verr = ">=1.1.2"
 
 [tool.poetry]
 name = "libreoffice pip template"
