--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,19 +7,19 @@
 	},
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"dockerComposeFile": "docker-compose.yml",
-	"service": "libreoffice_app",
-	"workspaceFolder": "/workspace/libreoffice_python_app",
+	"service": "lo_pip_app",
+	"workspaceFolder": "/workspace/libreoffice_pip_ext",
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [3002, 3003],
+	"forwardPorts": [3020, 3021],
 	"portsAttributes": {
-		"3002": {
+		"3020": {
 			"visibility": "private",
 			"label": "LibreOffice http Server"
 		},
-		"3003": {
+		"3021": {
 			"visibility": "private",
 			"label": "LibreOffice https Server"
 		},
@@ -60,7 +60,7 @@
 						]
 					}
 				},
-				"vs-browser.url": "http://localhost:3002"
+				"vs-browser.url": "http://localhost:3020"
 			}
 		}
 	},
