--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  libreoffice_app:
+  lo_pip_app:
     env_file: .env
     network_mode: "bridge"
     # env_file: user.env
@@ -11,8 +11,9 @@ services:
       args:
         LO_VERSION: "7.5.5"
         CONFIG_DIR: /config
+        POETRY_VER: "1.6.1"
     # user: root
-    container_name: libreoffice_app
+    container_name: lo_pip_app
     security_opt:
       - seccomp:unconfined #optional
     environment:
@@ -21,11 +22,11 @@ services:
       - PGID=0
       - CONFIG_DIR=/config
       - DEV_CONTAINER=1
-      - WORK_DIR=/workspace/libreoffice_python_app
+      - WORK_DIR=/workspace/libreoffice_pip_ext
     volumes:
       - type: bind
         source: ../
-        target: /workspace/libreoffice_python_app
+        target: /workspace/libreoffice_pip_ext
       - type: bind
         source: ../Documents
         target: /config/Documents
@@ -37,11 +38,11 @@ services:
         target: /config
       - type: volume
         source: app_virtual_env
-        target: /workspace/libreoffice_python_app/.venv
+        target: /workspace/libreoffice_pip_ext/.venv
     
     ports:
-      - 3002:3000
-      - 3003:3001
+      - 3020:3000
+      - 3021:3001
     restart: unless-stopped
 
 volumes:
