--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.oxt.config]
 build_dir = "build"
-dist_dir = "dist"
+dist_dir = "tmp_dist" # should be changed to someting like dist, tmp_dist is not included in git
 oxt_name = "OooPip"
 token_file_ext = ["txt", "xml", "xcu"]
 update_file = "ooopip.ext.update.xml"
@@ -8,6 +8,7 @@ py_pkg_names = [] # ["ooodev", "ooo"]
 py_pkg_files = []
 py_pkg_dir = "py_pkgs"
 pip_wheel_url = "https://files.pythonhosted.org/packages/50/c2/e06851e8cc28dcad7c155f4753da8833ac06a5c704c109313b8d5a62968a/pip-23.2.1-py3-none-any.whl"
+install_wheel = true
 zip_preinstall_pure = true
 auto_install_in_site_packages = true
 
