--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ pip_wheel_url = "https://files.pythonhosted.org/packages/50/c2/e06851e8cc28dcad7
 install_wheel = true
 zip_preinstall_pure = true
 auto_install_in_site_packages = true
+test_internet_url="https://duckduckgo.com"
+log_pip_installs = true
 
 
 
@@ -32,6 +34,7 @@ log_name = "OOO PIP Installer"
 log_level = "DEBUG" # NONE, DEBUG, INFO, WARNING, ERROR, CRITICAL
 log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
 # log_format = "%(levelname)s [%(module)s.py][%(funcName)s::%(lineno)d] %(message)s"
+lo_pip = "lo_pip"
 
 [tool.oxt.requirements]
 # https://python-poetry.org/docs/dependency-specification/
