--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
+# See: https://github.com/Amourspirit/python-libreoffice-pip/wiki/pyproject.toml
 [tool.oxt.config]
 auto_install_in_site_packages = true
 build_dir = "build"
@@ -32,8 +33,8 @@ log_file = "pip_install.log"
 log_name = "OOO PIP Installer"
 log_level = "DEBUG" # NONE, DEBUG, INFO, WARNING, ERROR, CRITICAL
 log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
-# log_format = "%(levelname)s [%(module)s.py][%(funcName)s::%(lineno)d] %(message)s"
 lo_pip = "lo_pip"
+platform = "all"
 
 [tool.oxt.requirements]
 # https://python-poetry.org/docs/dependency-specification/
