--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ auto_install_in_site_packages = true
 build_dir = "build"
 dist_dir = "tmp_dist" # should be changed to someting like dist, tmp_dist is not included in git
 install_wheel = true
-log_pip_installs = true
+log_pip_installs = false
 oxt_name = "OooPip"
 pip_wheel_url = "https://files.pythonhosted.org/packages/50/c2/e06851e8cc28dcad7c155f4753da8833ac06a5c704c109313b8d5a62968a/pip-23.2.1-py3-none-any.whl"
 py_pkg_dir = "py_pkgs"
