--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ py_pkg_names = [] # ["ooodev", "ooo"]
 token_file_ext = ["txt", "xml", "xcu", "xcs"]
 update_file = "update.xml"
 zip_preinstall_pure = true
+window_timeout = 5 # number of seconds to wait for window to appear
 
 [tool.oxt.token]
 # in the form of "token_name": "token_value"
@@ -35,11 +36,13 @@ log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
 lo_pip = "lo_pip"
 platform = "all"
 show_progress = true
+startup_event = "OnStartApp" # OnStartApp or onFirstVisibleTask
 
 [tool.oxt.requirements]
 # https://python-poetry.org/docs/dependency-specification/
 typing-extensions = ">=4.7.0"
 verr = ">=1.1.2"
+ooo-dev-tools = ">=0.12.2"
 
 [tool.oxt.preinstall.pure]
 # verr = ">=1.1.2"
