updates for configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,9 @@ log_level = "DEBUG" # NONE, DEBUG, INFO, WARNING, ERROR, CRITICAL
 log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
 lo_pip = "lo_pip"
 platform = "all"
-show_progress = true
 startup_event = "OnStartApp" # OnStartApp or onFirstVisibleTask
+show_progress = true
+delay_startup = true # determines if installing waits fo the window to load before installing
 
 [tool.oxt.requirements]
 # https://python-poetry.org/docs/dependency-specification/
