update for progress dialogs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ token_file_ext = ["txt", "xml", "xcu", "xcs"]
 update_file = "update.xml"
 zip_preinstall_pure = true
 window_timeout = 5 # number of seconds to wait for window to appear
+dialog_desktop_owned = true # determines if the dialog is owned by the desktop window
 
 [tool.oxt.token]
 # in the form of "token_name": "token_value"
