--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,11 @@ token_file_ext = ["txt", "xml", "xcu", "xcs"]
 update_file = "update.xml"
 zip_preinstall_pure = true
 window_timeout = 5 # number of seconds to wait for window to appear
-dialog_desktop_owned = true # determines if the dialog is owned by the desktop window
+dialog_desktop_owned = false # determines if the dialog is owned by the desktop window
 resource_dir_name = "resources"
 resource_properties_prefix = "pipstrings"
 default_locale = ["en", "US"]
+sym_link_cpython = false
 
 [tool.oxt.token]
 # in the form of "token_name": "token_value"
@@ -48,6 +49,9 @@ delay_startup = true # determines if installing waits fo the window to load befo
 # https://python-poetry.org/docs/dependency-specification/
 typing-extensions = ">=4.7.0"
 verr = ">=1.1.2"
+
+[tool.oxt.isolate]
+windows = [] # ["odfpy"]
 
 [tool.oxt.preinstall.pure]
 # verr = ">=1.1.2"
