--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ resource_properties_prefix = "pipstrings" # https://tinyurl.com/ymeh4c9j#resourc
 default_locale = ["en", "US"] # https://tinyurl.com/ymeh4c9j#default_locale
 sym_link_cpython = false # https://tinyurl.com/ymeh4c9j#sym_link_cpython
 uninstall_on_update = true # https://tinyurl.com/ymeh4c9j#uninstall_on_update uninstall previous python packages on update
+install_on_no_uninstall_permission = true # https://tinyurl.com/ymeh4c9j#install_on_no_uninstall_permission
 
 [tool.oxt.token]
 # in the form of "token_name": "token_value"
@@ -84,7 +85,7 @@ es = "Plantilla para crear extensiones basadas en pip para LibreOffice"
 
 [tool.poetry]
 name = "libreoffice pip template"
-version = "0.2.0"
+version = "0.2.1"
 description = "Template for creating pip based extensions for for LibreOffice"
 authors = [":Barry-Thomas-Paul: Moss <bigbytetech@gmail.com>"]
 license = "MIT"
