--- a/.devcontainer/lo_sdk/devcontainer.json
+++ b/.devcontainer/lo_sdk/devcontainer.json
@@ -1,19 +1,19 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "LibreOffice Python App",
+	"name": "LibreOffice Python App SDK",
 	"hostRequirements": {
 		"cpus": 4
 	},
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"dockerComposeFile": "./lo_only/docker-compose.yml",
-	"service": "lo_pip_app",
+	"dockerComposeFile": "./docker-compose.yml",
+	"service": "lo_pip_app_sdk",
 	"workspaceFolder": "/workspace/libreoffice_pip_ext",
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [3020, 3021],
+	"forwardPorts": [3022, 3023],
 	"portsAttributes": {
 		"2002": {
 			"onAutoForward": "silent",
@@ -52,7 +52,7 @@
 						]
 					}
 				},
-				"vs-browser.url": "http://localhost:3020"
+				"vs-browser.url": "http://localhost:3022"
 			}
 		}
 	},
