--- a/.devcontainer/lo_sdk/docker-compose.yml
+++ b/.devcontainer/lo_sdk/docker-compose.yml
@@ -1,19 +1,17 @@
-version: "3.9"
-
 services:
-  lo_pip_app:
-    env_file: .env
+  lo_pip_app_sdk:
+    env_file: ../.env
     network_mode: "bridge"
     # env_file: user.env
     build:
-      context: ../
-      dockerfile: .devcontainer/Dockerfile
+      context: ../../
+      dockerfile: .devcontainer/lo_sdk/Dockerfile
       args:
-        LO_VERSION: "7.6.3"
-        POETRY_VERSION: "1.7.1"
+        LO_VERSION: "version-7.6.7.2-r0"
+        POETRY_VERSION: "1.8.3"
         CONFIG_DIR: /config
     # user: root
-    container_name: lo_pip_app
+    container_name: lo_pip_app_sdk
     security_opt:
       - seccomp:unconfined #optional
     environment:
@@ -25,13 +23,13 @@ services:
       - WORK_DIR=/workspace/libreoffice_pip_ext
     volumes:
       - type: bind
-        source: ../
+        source: ../../
         target: /workspace/libreoffice_pip_ext
       - type: bind
-        source: ../Documents
+        source: ../../Documents
         target: /config/Documents
       - type: bind
-        source: ../macro
+        source: ../../macro
         target: /config/.config/libreoffice/4/user/Scripts/python
       - type: volume
         source: app_lo_config
@@ -41,8 +39,8 @@ services:
         target: /workspace/libreoffice_pip_ext/.venv
     
     ports:
-      - 3020:3000
-      - 3021:3001
+      - 3022:3000
+      - 3023:3001
     restart: unless-stopped
 
 volumes:
