--- a/.gitignore
+++ b/.gitignore
@@ -213,6 +213,10 @@ pyrightconfig.json
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 ### dotenv ###
+
+# Pyenv
+.python-version
+
 user.env
 
 !.devcontainer/res/scripts
