--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ delay_startup = true # determines if installing waits fo the window to load befo
 [tool.oxt.requirements]
 # https://tinyurl.com/ymeh4c9j#tooloxtrequirements
 # https://python-poetry.org/docs/dependency-specification/
-typing-extensions = ">=4.8.0"
+typing-extensions = ">=4.12.2"
 verr = ">=1.1.2"
 
 [tool.oxt.isolate]
@@ -85,7 +85,7 @@ es = "Plantilla para crear extensiones basadas en pip para LibreOffice"
 
 [tool.poetry]
 name = "libreoffice pip template"
-version = "0.2.2"
+version = "0.3.0"
 description = "Template for creating pip based extensions for for LibreOffice"
 authors = [":Barry-Thomas-Paul: Moss <bigbytetech@gmail.com>"]
 license = "MIT"
@@ -94,20 +94,20 @@ packages = [{ include = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-ooouno = "^2.1.2"
+ooouno = ">=3.0.0"
 toml = "^0.10.2"
-typing-extensions = ">=4.9.0"
+typing-extensions = ">=4.12.2"
 
 
 [tool.poetry.group.dev.dependencies]
 types-scriptforge = ">=2.0.1"
-pytest = "^7.4.0"
+pytest = ">=8.3.3"
 pytest-dotenv = "^0.5.2"
-black = "^23.7.0"
-oooscript = "^1.1.3"
-oooenv = "^0.2.2"
+black = ">=24.8"
+oooscript = ">=1.1.4"
+oooenv = ">=0.2.4"
 lxml = "^4.9.3"
-ooo-dev-tools = ">=0.34.0"
+ooo-dev-tools = ">=0.47.13"
 
 [build-system]
 requires = ["poetry-core"]
