--- a/.devcontainer/lo_only/Dockerfile
+++ b/.devcontainer/lo_only/Dockerfile
@@ -108,7 +108,7 @@ RUN poetry config virtualenvs.in-project true \
 #   This is by design so that LibreOfffice will use the virtual environment python by default.
 #   This is done by adding the virtual environment path to the beginning of the PATH environment variable.
 #   When Poetry installls the virtual environment it will be modified to include the system site packages.
-ENV PATH="/workspace/libreoffice_pip_ext/.venv/bin:/usr/lib/libreoffice/program:/usr/lib/libreoffice/sdk/bin:$PATH" \
+ENV PATH="/workspace/libreoffice_pip_ext/.venv/bin:/usr/lib/libreoffice/program:$PATH" \
     URE_BOOTSTRAP="file:///usr/lib/libreoffice/program/fundamentalrc" \
     # PYTHONPATH="/usr/lib/libreoffice/program/../program:$PYTHONPATH" \
     PYTHONPATH="/usr/lib/libreoffice/program:$PYTHONPATH" \
@@ -116,21 +116,7 @@ ENV PATH="/workspace/libreoffice_pip_ext/.venv/bin:/usr/lib/libreoffice/program:
     LD_LIBRARY_PATH="/usr/lib/libreoffice/sdk/lib:/usr/lib/libreoffice/program:/usr/lib/jvm/java-1.8-openjdk/jre/lib/amd64/client:/usr/lib/jvm/java-1.8-openjdk/jre/lib/amd64/server:/usr/lib/jvm/java-1.8-openjdk/jre/lib/amd64/native_threads:/usr/lib/jvm/java-1.8-openjdk/jre/lib/amd64" \
     OFFICE_HOME="/usr/lib/libreoffice" \
     OFFICE_PROGRAM_PATH="/usr/lib/libreoffice/program" \
-    UNO_PATH="/usr/lib/libreoffice/program" \
-    OO_SDK_NAME="libreoffice_sdk" \
-    OO_SDK_HOME="/usr/lib/libreoffice/sdk" \
-    OO_SDK_MAKE_HOME="/usr/bin" \
-    OO_SDK_CAT_HOME="/bin" \
-    OO_SDK_SED_HOME="/bin" \
-    OO_SDK_ZIP_HOME="usr/bin" \
-    OO_SDK_URE_BIN_DIR="/usr/lib/libreoffice/program" \
-    OO_SDK_URE_LIB_DIR="/usr/lib/libreoffice/program" \
-    OO_SDK_URE_JAVA_DIR="/usr/lib/libreoffice/program/classes" \
-    OO_SDK_JAVA_HOME="/usr/lib/jvm/java-1.8-openjdk" \
-    OO_SDK_OUTPUT_DIR="/config" \
-    OO_SDK_OUT="/config/libreoffice_sdk" \
-    OO_TYPES_UNO="/usr/lib/libreoffice/program/types.rdb" \
-    OO_TYPES_OFFICE="/usr/lib/libreoffice/program/types/offapi.rdb"
+    UNO_PATH="/usr/lib/libreoffice/program"
 
 # Cannot persist python version into build here so, get the python version and run all the commands the use it.
 RUN MY_PY_VER=$(python -c "import sys; major, minor = sys.version_info[:2]; print(f'{major}.{minor}');" ) \
