--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
         "github.copilot-chat",
         "mhutchie.git-graph",
         "oderwat.indent-rainbow",
-        "redhat.vscode-xml"
+        "redhat.vscode-xml",
+        "charliermarsh.ruff"
     ]
 }
