--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,10 @@
     "terminal.integrated.shellIntegration.enabled": true,
     "testExplorer.useNativeTesting": false,
     "[python]": {
-        "editor.formatOnPaste": false,
-        "editor.formatOnSaveMode": "file",
+        "editor.defaultFormatter": "charliermarsh.ruff",
         "editor.formatOnSave": true,
-        "editor.defaultFormatter": "ms-python.black-formatter"
+        "editor.formatOnPaste": true,
+        "editor.formatOnSaveMode": "file"
     },
     "python.defaultInterpreterPath": "${workspaceRoot}/.venv/bin/python3",
     "autoDocstring.docstringFormat": "google",
@@ -100,6 +100,5 @@
     ],
     "cSpell.words": [
         "Addin"
-    ],
-    "python.analysis.typeCheckingMode": "basic"
+    ]
 }
