--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,11 +36,12 @@
 				"ms-python.python",
 				"ms-python.vscode-pylance",
 				"njpwerner.autodocstring",
-				"ms-python.black-formatter",
 				"ms-vscode.test-adapter-converter",
 				"Phu1237.vs-browser",
 				"streetsidesoftware.code-spell-checker",
-				"bungcip.better-toml"
+				"bungcip.better-toml",
+				"charliermarsh.ruff",
+				"tamasfe.even-better-toml"
 			],
 			// Adds VS Code settings.json values into the environment.
 			"settings": {
