--- a/.devcontainer/lo_sdk/Dockerfile
+++ b/.devcontainer/lo_sdk/Dockerfile
@@ -64,7 +64,7 @@ RUN sed -i "s/\/bin\/ash/\/bin\/bash/g" /etc/passwd \
 COPY ../.devcontainer/res $CONFIG_DIR/.tmp/res
 COPY ../.devcontainer/root/rc.sh /etc/profile.d/10bashrc.sh
 COPY ../.devcontainer/root/bashrc.sh $CONFIG_DIR/.bashrc
-COPY .//.devcontainer/root/bash_custom.sh $CONFIG_DIR/.bashrc_custom
+COPY ./.devcontainer/root/bash_custom.sh $CONFIG_DIR/.bashrc_custom
 
 
 # ENV HOME=$CONFIG_DIR \
@@ -90,7 +90,7 @@ RUN MY_PY_VER=$(python -c "import sys; major, minor = sys.version_info[:2]; prin
     rm "/usr/lib/python$MY_PY_VER/EXTERNALLY-MANAGED"; fi
 
 WORKDIR /workspace/libreoffice_pip_ext
-COPY ../*.toml ../*.lock ./
+COPY ../*.toml ../*.lock ../*.md ./
 
 COPY --from=uv_full_src /uv /uvx /bin/
 ENV VIRTUAL_ENV=/workspace/libreoffice_pip_ext/.venv
